src/FinancialForce Accounting/objects/codaCashEntryLineItem__c.object
<CustomObject>
    <customHelpPage>codahelpcashentry</customHelpPage>
    <description>Stores the line items on cash entry.</description>
    <fields>
        <fullName>AccountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItemsAcDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItemsAcDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItemsAcDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountPaymentMethod__c</fullName>
        <label>Account Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountReference__c</fullName>
        <label>Account Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccountValue__c</fullName>
        <label>Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashEntryCurrency__c</fullName>
        <description>Cash entry currency field for layouts</description>
        <formula>CashEntry__r.CashEntryCurrency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Entry Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashEntryDate__c</fullName>
        <formula>CashEntry__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CashEntryValue__c</fullName>
        <label>Cash Entry Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashEntry__c</fullName>
        <label>Cash Entry</label>
        <referenceTo>codaCashEntry__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>CashEntryLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValue__c</fullName>
        <formula>BankAccountValue__c  -  Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>Cash_Entry_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FOR DEPRECATION:Payment Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cash Entry Line Items</relationshipLabel>
        <relationshipName>R00N20000001gr8zEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentValue__c</fullName>
        <label>FOR DEPRECATION:Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SignedLineCharges__c</fullName>
        <formula>IF( text(CashEntry__r.Type__c) = &quot;Refund&quot;, Charges__c  *-1, Charges__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Line Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SignedNetValue__c</fullName>
        <formula>IF( text(CashEntry__r.Type__c) = &quot;Refund&quot;, NetValue__c *-1, NetValue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SignedValue__c</fullName>
        <formula>IF( text(CashEntry__r.Type__c) = &quot;Refund&quot;, CashEntryValue__c *-1, CashEntryValue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cash Entry Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cash Entry Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Entry Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>